--- a/WebApp/wwwroot/HtmlResponse/verify-email.html
+++ b/WebApp/wwwroot/HtmlResponse/verify-email.html
@@ -23,7 +23,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                         <tr>
                             <td style="text-align: center">
-                                <a href="#" style="display: block;margin-bottom: 10px;"> <img src="~/assets/landing-page/image/Logo.png" height="24" alt="logo"></a> <br>
+                                <a href="#" style="display: block;margin-bottom: 10px;"> <img src="https://royalhotel.azurewebsites.net/assets/landing-page/image/Logo.png" height="24" alt="logo" /></a> <br>
                             </td>
                         </tr>
                         <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
